--- a/css/blocks/header.css
+++ b/css/blocks/header.css
@@ -18,6 +18,7 @@
    text-transform: uppercase;
    margin-right: 80px;
    font-size: 16px;
+   line-height: 20px;
 }
 
 .page-header__logo::before{
@@ -45,6 +46,7 @@
 
 .page-header a, .main-menu a {
     font-size: 16px;
+    line-height: 20px;
     color: #533738;
     text-decoration: none;
   }
