--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
 @import url("fonts.css");
 @import url(core.css);
 @import url(blocks/header.css);
+@import url(blocks/main.css);
+@import url(blocks/footer.css);
